--- a/config.yml
+++ b/config.yml
@@ -1,12 +1,11 @@
-machine:
-pre: 
-- sudo apt-get update
-- sudo apt-get install dotnet-dev-1.0.1
-compile:
-override:
-- dotnet restore
-- dotnet build
-- dotnet publish -o publish
-test:
-override:
-- echo "no tests"
+version: 2.1
+jobs:
+  build:
+    docker:
+      - image: alpine:3.7
+    steps:
+      - run:
+          name: The First Step
+          command: |
+            echo 'Hello World!'
+            echo 'This is the delivery pipeline'
